--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,7 +15,7 @@ selenium =
 robotsuite = 1.4.3
 robotframework = 2.8.4
 robotframework-selenium2library = 1.5.0
-plone.app.robotramework = 0.8.3
+plone.app.robotframework = 0.8.3
 
 [robot]
 recipe = zc.recipe.egg
